Final Submission MADE 2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
             minifyEnabled true
             proguardFiles 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled true
+            proguardFiles 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
