--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,6 +24,10 @@ android {
             minifyEnabled true
             proguardFiles 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled true
+            proguardFiles 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
