--- a/core/build.gradle
+++ b/core/build.gradle
@@ -60,4 +60,6 @@ dependencies {
 
     implementation "net.zetetic:android-database-sqlcipher:4.4.0"
     implementation "androidx.sqlite:sqlite-ktx:2.1.0"
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
