--- a/favorite/build.gradle
+++ b/favorite/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation project(":core")
     implementation project(":app")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
